src/objects/StudentAcademicCourseAttFromBan__c.object
<CustomObject>
    <description>Control object</description>
    <fields>
        <fullName>ActionNeeded__c</fullName>
        <label>Action Needed</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AssessmentTaskCodeIN__c</fullName>
        <label>Assessment / Task Code IN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AttemptedIN__c</fullName>
        <label>Attempted (IN)</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CompositeKeyIN__c</fullName>
        <description>PIDM + Course Code + Test Date</description>
        <externalId>true</externalId>
        <label>Composite Key (IN)</label>
        <length>45</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CompositeParentKeyIN__c</fullName>
        <description>PIDM + Course Code + Term Code</description>
        <label>Composite Parent Key (IN)</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PassedIN__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Passed (IN)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentAcademicCourseAttempt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Student Academic Course Attempt</label>
        <referenceTo>StudentAcademicCourseAttempt__c</referenceTo>
        <relationshipLabel>Student Academic Course Atts From Banner</relationshipLabel>
        <relationshipName>StudentAcademicCourseAttsFromBanner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SynchronizationError__c</fullName>
        <label>Synchronization Error</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeIN__c</fullName>
        <description>Obj/Prfm etc</description>
        <label>Type (IN)</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Student Academic Course Att From Banner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>ActionNeeded__c</columns>
        <columns>AssessmentTaskCodeIN__c</columns>
        <columns>AttemptedIN__c</columns>
        <columns>CompositeKeyIN__c</columns>
        <columns>CompositeParentKeyIN__c</columns>
        <columns>PassedIN__c</columns>
        <columns>StudentAcademicCourseAttempt__c</columns>
        <columns>SynchronizationError__c</columns>
        <columns>TypeIN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SACAFB-{0}</displayFormat>
        <label>Student Academic Course Att From Banner Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Academic Course Atts From Banner</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>